--- a/Microservices/package.json
+++ b/Microservices/package.json
@@ -17,6 +17,7 @@
     "bunyan": "^1.8.15",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "semver": "^7.5.1"
   }
 }
