--- a/Microservices/Feedback Service/package.json
+++ b/Microservices/Feedback Service/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "speakers-service",
+  "name": "feedback-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon bin/run.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +12,6 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bunyan": "^1.8.15",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "express": "^4.18.2"
   }
 }
