--- a/Microservices/art-meetup/package.json
+++ b/Microservices/art-meetup/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "speakers-service",
+  "name": "art-meetup",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "art-meetup": "bin/run.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon bin/run.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
-    "bunyan": "^1.8.15",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "nodemon": "^2.0.22"
   }
 }
