--- a/Microservices/Feedback Service/package.json
+++ b/Microservices/Feedback Service/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bunyan": "^1.8.15",
-    "express": "^4.18.2"
+    "cookie-session": "^2.0.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
